--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
-    <script defer src="js/main.js"></script>
     <title>Product App</title>
 </head>
 <body>
 <div id="app">
-    <h1>Product Name</h1>
+    <h1>{{ product }}</h1>
 </div>
 </body>
 </html>
