--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
     <title>Product App</title>
 </head>
 <body>
-<div id="app">
-    <h1>{{ product }}</h1>
-    <h1>{{ description }}</h1>
+<<div id="app">
+
+    <div class="product">
+
+        <div class="product-image">
+            <img alt="#" v-bind:src="image"/>
+        </div>
+
+        <div class="product-info">
+            <h1>{{ product }}</h1>
+        </div>
+
+    </div>
 </div>
 </body>
 </html>
