--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="product">
 
         <div class="product-image">
-            <img alt="#" v-bind:src="image"/>
+            <img :src="image" :alt="altText" />
         </div>
 
         <div class="product-info">
