--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="product-info">
             <h1>{{ product }}</h1>
         </div>
+        <div class="link">
+            <a v-bind:href="link">More products like this</a>
+        </div>
 
     </div>
 </div>
