--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
     <title>Product App</title>
 </head>
 <body>
-<<div id="app">
-
+<div id="app">
     <div class="product">
-
         <div class="product-image">
-            <img :src="image" :alt="altText" />
+            <img :src="image" :alt="altText"/>
         </div>
-
         <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="inStock">In Stock</p>
+            <p v-else>Out of Stock</p>
         </div>
-        <div class="link">
-            <a v-bind:href="link">More products like this</a>
-        </div>
-
     </div>
 </div>
+
 </body>
 </html>
