--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <span v-if="onSale">On Sale</span>
+            <span v-else>No Sale</span>
         </div>
     </div>
 </div>
