--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
         </div>
         <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inStock">In Stock</p>
+            <p v-if="inStock">In stock</p>
             <p v-else>Out of Stock</p>
-            <span v-if="onSale">On Sale</span>
-            <span v-else>No Sale</span>
+            <ul>
+                <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.variantId">
+                <p>{{ variant.variantColor }}</p>
+            </div>
         </div>
+
     </div>
 </div>
 
