Добавление кнопки и смена цвета при наведении

--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
                 <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div v-for="variant in variants" :key="variant.variantId">
-                <p>{{ variant.variantColor }}</p>
+                <p @mouseover="updateProduct(variant.variantImage)">
+                    {{ variant.variantColor }}
+                </p>
             </div>
-            <ul>
-                <li v-for="sizes in sizes">{{ sizes }}</li>
-            </ul>
+            <div class="cart">
+                <p>Cart({{ cart }})</p>
+            </div>
+            <button v-on:click="addToCart">Add to cart</button>
+
+
         </div>
+
 
     </div>
 </div>
