--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <p>Cart({{ cart }})</p>
             </div>
             <button v-on:click="addToCart">Add to cart</button>
-
-
+            <button v-on:click="deleteFromCart">delete cart</button>
         </div>
 
 
