--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
         </div>
 
         <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
             <p v-if="inStock">In stock</p>
             <p v-else>Out of Stock</p>
             <ul>
                 <li v-for="detail in details">{{ detail }}</li>
             </ul>
+
             <div
                     class="color-box"
-                    v-for="variant in variants"
+                    v-for="(variant, index) in variants"
                     :key="variant.variantId"
                     :style="{ backgroundColor:variant.variantColor }"
-                    @mouseover="updateProduct(variant.variantImage)"
-            >
+                    @mouseover="updateProduct(index)"
+            ></div>
             </div>
 
 
@@ -50,6 +51,7 @@
 
     </div>
 </div>
+
 
 
 </body>
