--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
         <div class="product-info">
             <h1>{{ title }}</h1>
+            <p>{{sale}}</p>
             <p v-if="inStock">In stock</p>
             <p v-else class="text-line">Out of Stock</p>
+
             <ul>
                 <li v-for="detail in details">{{ detail }}</li>
             </ul>
