--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Cart({{ cart.length }})</p>
 
     </div>
-    <product :premium="premium" @add-to-cart="updateCart"></product>
+    <product :premium="premium" @add-to-cart="updateCart" @delete-from-cart="deleteItem"></product>
 
 </div>
 </body>
